plugins {
    id "java"
}

group "com.jmc"
version "1.0.0"

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

repositories {
    mavenLocal()
    mavenCentral()
    maven { url "https://killerjmc.github.io/jmc-utils/repo" }
}

dependencies {
    ext {
        jmcUtilsVersion = "3.7.0"
        log4jVersion = "2.0.5"
        junitVersion = "4.13.2"
        aspectjVersion = "1.9.21.1"
        jmhVersion = "1.35"
        lombokVersion = "1.18.30"
        cglibVersion = "3.3.0"
        javaAssistVersion = "3.29.2-GA"
        groovyVersion = "4.0.11"
    }

    implementation "com.jmc:jmc-utils:$jmcUtilsVersion"
    implementation "org.slf4j:slf4j-log4j12:$log4jVersion"
    implementation "junit:junit:$junitVersion"
    compileOnly "org.projectlombok:lombok:$lombokVersion"
    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
    implementation "org.openjdk.jmh:jmh-generator-annprocess:$jmhVersion"
    annotationProcessor "org.openjdk.jmh:jmh-generator-annprocess:$jmhVersion"

    implementation "cglib:cglib:$cglibVersion"
    implementation "org.aspectj:aspectjrt:$aspectjVersion"
    implementation "org.javassist:javassist:$javaAssistVersion"

    apply plugin: "groovy"
    implementation "org.apache.groovy:groovy:$groovyVersion"
}





